= 3.6.0.pre
- Added threadsafety as tech preview, enabled with ActiveScaffold.threadsafe! in initializer.
- Added active_scaffold_config.build_action_columns method to easily create action columns for custom form actions.
- Replaced each(options) with each_column(options) in ActionColumns
- Replaced collect_visible(options, &proc) with visible_columns(options).map(&proc) in ActionColumns
- Replaced names with visible_columns_names in ActionColumns
- Replaced names_without_auth_check with to_a in ActionColumns
- Support rails 5.2, drop support for 4.0 and 4.1
- Require ruby 2.3.1, drop support for 2.0, 2.1 and 2.2.
- Fix has_one/belongs_to nested for polymorphic associations, leave rails to build conditions from {assoc_name: record} hash
- Cast blank into nil for null string columns in conditions_from_params
- Support multipart with iframe in process_action_link_action default response
- Fix hidding and showing columns based on permissions with update_columns on subforms
- Fix subform crud in subform subgroup, when form is on nested scaffold
- Fix JS when rails-ujs is used instead of jquery_ujs (rails >= 5.1)
- Display flash messages only inside create form, when conf.list.always_show_create is enabled, instead of displaying twice (in form and above list).
- Fix default autocomplete value for password form_ui, new-password has to be used because off is ignored by browsers in password fields now

= 3.5.4
- Fix chosen form_ui for plural associations
- Eager load with includes in association options query, if includes has a hash with own association key, see #612

= 3.5.3
- Fix :text fields for rails >= 5.1
- Send empty array in collection associations with select form_ui (checkbox or draggable list) when no option is available

= 3.5.2
- Load chosen on turbolinks:load event
- Fix association.blank? when associated_limit=0 and includes=nil

= 3.5.1
- Fix set false options for date picker
- Fix :hidden form_ui for singular associations