@@ -41,17 +41,17 @@ class ConfigurableTest < MiniTest::Test
     ## test normal block behaviors
     ##
     # functions
-    assert_equal hello, configurable_class.configure { hello }
+    assert_equal hello, (configurable_class.configure { hello })
     # variables
-    assert_equal configurable_class, configurable_class.configure { configurable_class }
+    assert_equal configurable_class, (configurable_class.configure { configurable_class })
     # constants
-    assert_equal ConfigurableTest::HELLO, configurable_class.configure { ConfigurableTest::HELLO }
+    assert_equal ConfigurableTest::HELLO, (configurable_class.configure { ConfigurableTest::HELLO })
 
     ##
     ## test extra "localized" block behavior
     ##
     # functions
-    assert_equal configurable_class.foo, configurable_class.configure { foo }
+    assert_equal configurable_class.foo, (configurable_class.configure { foo })
     # constants - not working
     #    assert_equal configurable_class.FOO, configurable_class.configure {FOO}
   end
@@ -73,25 +73,25 @@ class ConfigurableTest < MiniTest::Test
     ## test normal block behaviors
     ##
     # functions
-    assert_equal hello, ExtendedClass.configure { hello }
+    assert_equal hello, (ExtendedClass.configure { hello })
     # variables
-    assert_equal ExtendedClass, ExtendedClass.configure { ExtendedClass }
+    assert_equal ExtendedClass, (ExtendedClass.configure { ExtendedClass })
     # constants
-    assert_equal ConfigurableTest::HELLO, ExtendedClass.configure { ConfigurableTest::HELLO }
+    assert_equal ConfigurableTest::HELLO, (ExtendedClass.configure { ConfigurableTest::HELLO })
 
     ##
     ## test extra "localized" block behavior
     ##
     # functions
-    assert_equal ExtendedClass.foo, ExtendedClass.configure { foo }
+    assert_equal ExtendedClass.foo, (ExtendedClass.configure { foo })
     # constants - not working
     #    assert_equal ExtendedClass.FOO, ExtendedClass.configure {FOO}
   end
 
   def test_arity
     # this is the main style
-    assert_equal 'foo', ExtendedClass.configure { 'foo' }
+    assert_equal 'foo', (ExtendedClass.configure { 'foo' })
     # but we want to let people accept the configurable class as the first argument, too
-    assert_equal 'bar', ExtendedClass.configure { |a| a.foo } # rubocop:disable Style/SymbolProc
+    assert_equal 'bar', (ExtendedClass.configure { |a| a.foo }) # rubocop:disable Style/SymbolProc
   end
 end
