@@ -1,3 +1,5 @@
+- Cleanup: deprecate ActiveScaffold.set_defaults for ActiveScaffold.defaults, rename some setters
+
 = 3.6.0.pre
 - Added threadsafety as tech preview, enabled with ActiveScaffold.threadsafe! in initializer.
 - Added active_scaffold_config.build_action_columns method to easily create action columns for custom form actions.
